Make link wrap entire index contact and fix css.

--- a/client/main.scss
+++ b/client/main.scss
@@ -195,9 +195,10 @@ a:visited {
   justify-self: end;
 }
 
-.index-contact a {
+.index-contact a,
+.name {
   font-weight: lighter;
   font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
+  // text-align: center;
   color: $darkText;
 }
